Update bio in _config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Yara Mohamed Nasser"
   pronouns         : "she/her"  
-  bio              : "Applied AI Engineer | AI Researcher | Published at ICRA 2026"
+  bio              : "Applied AI Engineer | AI Researcher "
   location         : "Alexandria, Egypt"
   employer         : "Leap Event Technology"
   uri              : # URL
