--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "yaranasserr/yaranasserr.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "me.jpeg"
   name             : "Yara Mohamed Nasser"
   pronouns         : "she/her"  
   bio              : "Applied AI Engineer | AI Researcher "
